Fixed small gap below the social media icons

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -24,7 +24,7 @@
 }
 
 .introduction p:nth-child(1) {
-    font-size: 1.25em;
+    font-size: 1.5em;
     font-weight: 400;
     text-transform: uppercase;
     text-align: left;
@@ -36,7 +36,7 @@
 }
 
 .introduction p:nth-child(2) {
-    font-size: 1.75em;
+    font-size: 2em;
     font-weight: 600;
     text-align: left;
 
@@ -66,7 +66,6 @@
     text-align: center;
     text-transform: uppercase;
 
-    margin-top: 1em;
     padding-inline: 2em;
     padding-top: 0.55em;
     padding-bottom: 0.55em;
@@ -83,7 +82,7 @@
 }
 
 .socials {
-    display: inherit;
+    display: flex;
     justify-content: flex-end;
 }
 
@@ -91,14 +90,17 @@
     padding-inline-end: 0.5em;
 }
 .socials a {
+    display: block;
+    text-align: center;
     width: fit-content;
-    height: fit-content;
+    height: auto;
 }
 .socials a:hover {
     opacity: 50%;
 }
 
 .socials a img {
+    display: block;
     width: 1.75em;
     height: auto;
 }   
